Update: added Taycan section

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="menu">
             <a href="https://www.porsche.com/international/models/911/" target="_blank">Home</a>
             <a href="#">Categories</a>
-            <a href="#">Newsletter</a>
+            <a href="#">Taycan</a>
             <a href="#">Contact</a>
 
         </div>
